add_subdirectory(Dasher)
add_subdirectory(SdlRender)
add_subdirectory(HlsDemuxer)
add_subdirectory(TelxDecoder)
add_subdirectory(UdpOutput)
add_subdirectory(TsMuxer)
add_subdirectory(TsDemuxer)
add_subdirectory(HttpInput)
add_subdirectory(Fmp4Splitter)
add_subdirectory(SocketInput)
add_subdirectory(RegulatorMono)
add_subdirectory(RegulatorMulti)
add_subdirectory(SubtitleEncoder)
add_subdirectory(TtmlDecoder)

